--- a/Adicionar-imoveis/adicionar-imoveis.html
+++ b/Adicionar-imoveis/adicionar-imoveis.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="imagem/png" href="../imagens-site/logo-parcial-negativa.png" />
   <title>Dreams - Imobiliaria</title>
 </head>
-<body onload="javascript:criaCookies()">
+<body>
   <header>
     <section class="box-header">
         <img src="../imagens-site/logo-positivo.png" class="logo" alt="">
