--- a/Pesquisar-Imoveis/pesquisar-imoveis.html
+++ b/Pesquisar-Imoveis/pesquisar-imoveis.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="imagem/png" href="../imagens-site/logo-parcial-negativa.png" />
     <title>Dreams - Imobiliaria</title>
 </head>
-<body onload="javascript:carregarNovosImoveis(),conferirCidades(),carregarImoveis([0, 0], [], 'Todas', 'Todos')">
+<body>
     <!-- <body> -->
         
     <header>
