Adição da lógica

--- a/Pesquisar-Imoveis/pesquisar-imoveis.html
+++ b/Pesquisar-Imoveis/pesquisar-imoveis.html
@@ -88,6 +88,7 @@
         <div class="botoes">
             <input class="bt bt-filtrar" id="btFiltrar" type="submit" value="Filtrar imóveis">
             <input class="bt bt-Limpar" id="btLimpar" type="button" value="Limpar Filtros">
+            <input class="bt bt-Relatorio" id="btRelatorio" type="button" value="Gerar Relatório">
         </div>
 
         <div class="qtdImoveis">
